# src/api/v1/product/controllers/findSingleItem.js
@@ -1,4 +1,4 @@
-const userService = require("../../../../lib/user");
+const productService = require("../../../../lib/product");
 const { getTransfromSingleData } = require("../../../../utils/responseData");
 
 const findSingleItem = async (req, res, next) => {
@@ -6,12 +6,23 @@ const findSingleItem = async (req, res, next) => {
 
   try {
     // find user by id
-    const user = await userService.findSingleItem(id);
+    const product = await productService.findSingleItem(id);
 
     // generate the atuale data for the response
     const data = getTransfromSingleData({
-      item: user,
-      selection: ["id", "name", "email", "role", "updatedAt", "createdAt"],
+      item: product,
+      selection: [
+        "id",
+        "title",
+        "avatar",
+        "status",
+        "price",
+        "description",
+        "category",
+        "tags",
+        "updatedat",
+        "createdat",
+      ],
     });
 
     const response = {
